Add company products

--- a/company.html
+++ b/company.html
@@ -290,8 +290,8 @@
                     ],
                     favorite: true,
                     items: [
-                        { name: "Uniforma Note 20", price: "$97.00", minOrder: "50 pieces", imgSrc: "https://via.placeholder.com/150" },
-                        { name: "Lutecia Note 19", price: "$55.00", minOrder: "50 pieces", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "Ulefone Note 20 Pro", price: 97.00, minOrder: "50 pieces", imgSrc: "assets/Shenzhen Gotron Electronic Co/products/Ulefone Note 20 pro.png" },
+                        { name: "Ulefone Note 19", price: 55.00, minOrder: "100 pieces", imgSrc: "assets/Shenzhen Gotron Electronic Co/products/Ulefone Note 19.png" }
                     ]
                 },
                 {
@@ -310,7 +310,7 @@
                     ],
                     favorite: false,
                     items: [
-                        { name: "Smart Band", price: "$8.29", minOrder: "2 - 4 pieces", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "3-in-1 Wireless Charger", price: 8.29, minOrder: "10 pieces", imgSrc: "assets/apex/products/3-in-1 Wireless Charger.png" }
                     ]
                 },
                 {
@@ -329,8 +329,8 @@
                     ],
                     favorite: true,
                     items: [
-                        { name: "Phone Model 1", price: "$1039.00", minOrder: "10 - 499 pieces", imgSrc: "https://via.placeholder.com/150" },
-                        { name: "Phone Model 2", price: "$180.00", minOrder: "2 - 9 pieces", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "iPhone 15 Pro Max", price: 1039.00, minOrder: "10 pieces", imgSrc: "assets/Reference Tech shenzhen Limited/products/iPhone 15 Pro Max.png" },
+                        { name: "Redmi Note 11 Pro", price: 180.00, minOrder: "2 pieces", imgSrc: "assets/Reference Tech shenzhen Limited/products/Redmi Note 11 Pro.png" }
                     ]
                 },
                 {
@@ -344,108 +344,98 @@
                         "Android barcode scanners"
                     ],
                     serviceGuarentees: [
-                        "With raw material traceability mark",
-                        "RoHS"
+                        "Supplier evaluation process",
+                        "In-depth customization",
+                        "Finished product inspection"
                     ],
                     favorite: false,
                     items: [
-                        { name: "Camera", price: "$513.90", minOrder: "1 piece", imgSrc: "https://via.placeholder.com/150" },
-                        { name: "Gaming Console", price: "$100.00", minOrder: "2 pieces", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "4g feature phone", price: 25.00, minOrder: "1 piece", imgSrc: "assets/Shenzhen Ulewei Electronics Co/products/4g feature phone.png" },
+                        { name: "Digital Video Camera", price: 100.00, minOrder: "2 pieces", imgSrc: "assets/Shenzhen Ulewei Electronics Co/products/Digital Video Camera.png" }
                     ]
                 },
                 {
                     company: "Shenzhen Richgrand Electronic Co., Ltd.",
                     logo: "assets/Shenzhen Richgrand Electronic Co/logo.png",
                     mainProducts: [
-                        "mobile phones", 
-                        "tablet computers", 
-                        "walkie-talkies", 
-                        "rugged tablet computers", 
-                        "Android barcode scanners"
+                        "mobile power",
+                        "data cable", 
+                        "Bluetooth headset", 
+                        "mobile phone case", 
+                        "second-hand phone"
                     ],
                     serviceGuarentees: [
-                        "With raw material traceability mark",
-                        "RoHS"
+                        "Deep customization",
+                        "Support ODM service",
+                        "Light customization"
                     ],
                     favorite: true,
                     items: [
-                        { name: "Phone Model 3", price: "$480.00 - $1200.00", minOrder: "1 piece", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "iPhone 14 Plus", price: 480.00, minOrder: "1 piece", imgSrc: "assets/Shenzhen Richgrand Electronic Co/products/image.png" }
                     ]
                 },
                 {
                     company: "Shenzhen South Digital Limited",
                     logo: "assets/Shenzhen South Digital Limited/logo.png",
                     mainProducts: [
-                        "mobile phones", 
-                        "tablet computers", 
-                        "walkie-talkies", 
-                        "rugged tablet computers", 
-                        "Android barcode scanners"
+                        "computers", "host computers", "data cables", "Bluetooth headsets", "second-hand phones"
                     ],
                     serviceGuarentees: [
-                        "With raw material traceability mark",
-                        "RoHS"
+                        "OEM for big brands",
+                        "Supplier evaluation procedures",
+                        "Deep customization"
                     ],
                     favorite: false,
                     items: [
-                        { name: "Laptop Model A", price: "$355.00 - $425.00", minOrder: "1 piece", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "Laptop Model A", price: 355.00, minOrder: "1 piece", imgSrc: "assets/Shenzhen South Digital Limited/products/image.png" }
                     ]
                 },
                 {
                     company: "Shenzhen Hopestar Sci-Tech Co., Ltd.",
                     logo: "assets/Shenzhen Hopestar Sci-Tech Co/logo.png",
                     mainProducts: [
-                        "mobile phones", 
-                        "tablet computers", 
-                        "walkie-talkies", 
-                        "rugged tablet computers", 
-                        "Android barcode scanners"
+                        "mobile phones", "tablet computers", "walkie-talkies", "rugged tablet computers", "Android barcode scanners"
                     ],
                     serviceGuarentees: [
-                        "With raw material traceability mark",
-                        "RoHS"
+                        "Supplier evaluation process",
+                        "Deep customization",
+                        "Support ODM service"
                     ],
                     favorite: false,
                     items: [
-                        { name: "Laptop Model A", price: "$355.00 - $425.00", minOrder: "1 piece", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "34-inch monitor", price: 208.00, minOrder: "10 piece", imgSrc: "assets/Shenzhen Hopestar Sci-Tech Co/products/image.png" }
                     ]
                 },
                 {
                     company: "Beijing Yike Century Technology Co., Ltd.",
                     logo: "assets/Beijing Yike Century Technology Co/logo.png",
                     mainProducts: [
-                        "mobile phones", 
-                        "tablet computers", 
-                        "walkie-talkies", 
-                        "rugged tablet computers", 
-                        "Android barcode scanners"
+                        "workstations", "servers", "computers", "laptops", "computer parts"
                     ],
                     serviceGuarentees: [
-                        "With raw material traceability mark",
-                        "RoHS"
+                        "Deep customization",
+                        "Support ODM service",
+                        "Light customization"
                     ],
                     favorite: false,
                     items: [
-                        { name: "Laptop Model A", price: "$355.00 - $425.00", minOrder: "1 piece", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "Lenovo Legion Laptop", price: 1355.00, minOrder: "100 pieces", imgSrc: "assets/Beijing Yike Century Technology Co/products/image.png" }
                     ]
                 },
                 {
                     company: "Junling Sihai Technology Group Co., Ltd.",
                     logo: "assets/Junling Sihai Technology Group Co/logo.png",
                     mainProducts: [
-                        "mobile phones", 
-                        "tablet computers", 
-                        "walkie-talkies", 
-                        "rugged tablet computers", 
-                        "Android barcode scanners"
+                        "workstations", "servers", "computers", "laptops", "computer parts"
                     ],
                     serviceGuarentees: [
-                        "With raw material traceability mark",
-                        "RoHS"
+                        "Support ODM service",
+                        "Supplier evaluation process",
+                        "Finished product inspection"
                     ],
                     favorite: false,
                     items: [
-                        { name: "Laptop Model A", price: "$355.00 - $425.00", minOrder: "1 piece", imgSrc: "https://via.placeholder.com/150" }
+                        { name: "Workstation", price: 1530.00, minOrder: "100 pieces", imgSrc: "assets/Junling Sihai Technology Group Co/products/image.png" }
                     ]
                 }
             ];
@@ -487,7 +477,7 @@
                             <button class="btn-next">&rarr;</button>
                         </div>
                         <h4 class="product-name">${company.items[currentProductIndex].name}</h4>
-                        <p class="product-price">Price: ${company.items[currentProductIndex].price}</p>
+                        <p class="product-price">Price: ${company.items[currentProductIndex].price.toFixed(2)} $</p>
                         <p class="product-min-order">Min. Order: ${company.items[currentProductIndex].minOrder}</p>
                         <button class="connect-button">Connect</button>
                     `;
@@ -518,8 +508,8 @@
                 companyCard.querySelector('.product-image img').src = product.imgSrc;
                 companyCard.querySelector('.product-image img').alt = product.name;
                 companyCard.querySelector('.product-name').textContent = product.name;
-                companyCard.querySelector('.product-price').textContent = `Price: ${product.price}`;
-                companyCard.querySelector('.product-min-order') = `Min. Order: ${product.minOrder}`;
+                companyCard.querySelector('.product-price').textContent = `Price: ${product.price.toFixed(2)} $`;
+                companyCard.querySelector('.product-min-order').textContent = `Min. Order: ${product.minOrder}`;
             }
         
             // Function to toggle favorite status
