--- a/company.html
+++ b/company.html
@@ -140,9 +140,9 @@
                 <p>0 Cooperation achieved</p>
                 <h3>BROWSING HISTORY</h3>
                 <div class="browsing-history-images">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image.png" alt="Ulefone Note 20 Pro">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-1.png" alt="iPhone 14 14plus">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-2.png" alt="Redmi Note 11 Pro">
+                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image.png" style="width: 22px; height: 22px;" alt="Ulefone Note 20 Pro">
+                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-1.png" style="width: 22px; height: 22px;" alt="iPhone 14 14plus">
+                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-2.png" style="width: 22px; height: 22px;" alt="Redmi Note 11 Pro">
                 </div>
             </div>
             <div class="card personal-info">
