--- a/company.html
+++ b/company.html
@@ -91,7 +91,7 @@
         }
 
         .browsing-history-images img {
-            width: 100px;
+            width: 300px;
             height: auto;
             margin-right: 10px;
         }
@@ -140,9 +140,9 @@
                 <p>0 Cooperation achieved</p>
                 <h3>BROWSING HISTORY</h3>
                 <div class="browsing-history-images">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image.png" style="width: 50px; height: 50px;" alt="Ulefone Note 20 Pro">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-1.png" style="width: 50px; height: 50px;" alt="iPhone 14 14plus">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-2.png" style="width: 50px; height: 50px;" alt="Redmi Note 11 Pro">
+                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image.png"  alt="Ulefone Note 20 Pro">
+                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-1.png"  alt="iPhone 14 14plus">
+                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-2.png"  alt="Redmi Note 11 Pro">
                 </div>
             </div>
             <div class="card personal-info">
