--- a/company.html
+++ b/company.html
@@ -92,7 +92,7 @@
 
         .browsing-history-images img {
             width: 300px;
-            height: auto;
+            height: 300px;
             margin-right: 10px;
         }
     </style>
