--- a/company.html
+++ b/company.html
@@ -65,12 +65,9 @@
         }
 
         .main-cards {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 三列布局 */
-            gap: 20px; /* 卡片之间的间距 */
-            list-style-type: disc; /* 使用圆点列表 */
-            padding-left: 20px; /* 左侧内边距 */
-            line-height: 1.6; /* 增加行距 */
+            display: flex;
+            gap: 20px; /* Space between the cards */
+            flex-wrap: wrap; /* Allows wrapping in smaller screens */
         }
 
         .card {
@@ -78,6 +75,23 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            flex: 1; /* Makes cards flexible */
+        }
+
+        .card-full-width {
+            background: white;
+            width: 100%;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            flex: 1; /* Makes cards flexible */
+        }
+
+        .middle-cards {
+            display: flex;
+            flex-direction: column; /* Stack message and logistics situation vertically */
+            gap: 10px; /* Space between the message and logistics situation */
+            flex: 1; /* Takes up equal space */
         }
 
         .browsing-history {
@@ -129,9 +143,15 @@
                     <li>Shipbuilding</li>
                 </ul>
             </div>
-            <div class="card">
-                <h3>MESSAGE</h3>
-                <p>NO</p>
+            <div class="middle-cards">
+                <div class="card">
+                    <h3>MESSAGE</h3>
+                    <p>NO</p>
+                </div>
+                <div class="card">
+                    <h3>LOGISTICS SITUATION</h3>
+                    <p>NO</p>
+                </div>
             </div>
             <div class="card">
                 <h3>WELCOME</h3>
@@ -140,22 +160,22 @@
                 <p>0 Cooperation achieved</p>
                 <h3>BROWSING HISTORY</h3>
                 <div class="browsing-history-images">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image.png"  alt="Ulefone Note 20 Pro">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-1.png"  alt="iPhone 14 14plus">
-                    <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\image-2.png"  alt="Redmi Note 11 Pro">
+                    <img src="assets/browsing-history/image.png" alt="Ulefone Note 20 Pro">
+                    <img src="assets/browsing-history/image-1.png" alt="iPhone 14 14plus">
+                    <img src="assets/browsing-history/image-2.png" alt="Redmi Note 11 Pro">
                 </div>
             </div>
-            <div class="card personal-info">
+        </div>
+
+        <br>
+
+        <div class="main-cards">
+            <div class="card-full-width">
+                <h3>SELECTED ITEMS</h3>
+                <p style="font-size: 14px; color: #555; display: inline-flex; align-items: center;">Electronics and electrical manufacturing&emsp;|&emsp;Automobile manufacturing&emsp;|&emsp;Chemical manufacturing&emsp;<img style="width: 24px; vertical-align: middle;" src="assets/icons/plus.png"></p>
                 
             </div>
-  
-            <div class="card LOGISTICS SITUATION">
-                <h3>LOGISTICS SITUATION</h3>
-                <p>NO</p>
-            </div>
-            <div class="card">
-
-            </div>
+            
 
         </div>
 
