--- a/Menu.html
+++ b/Menu.html
@@ -76,9 +76,9 @@
         <h1>China & Africa.com</h1>
         <div class="navbar">
             <ul>
-                <li><a href="#"> <img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\Group 89.png" alt="User Icon" style="width: 22px; height: 22px;"></a></li>
-                <li><a href="#"><img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\Vector-1.png" alt=User Icon" style="width: 22px; height: 22px;"></a></li>
-                <li><a href="#"><img src="D:\Wechat\WeChat Files\wxid_98947lqp72aa22\FileStorage\File\2024-12\Untitled (2)\Union.png" alt="User Icon" style="width: 22px; height: 22px;"></a></li>
+                <li><a href="#"><img src="assets/images(1)/images/Group 89.png" alt="User Icon" style="width: 22px; height: 22px;"></a></li>
+                <li><a href="#"><img src="assets/images(1)/images/Vector-1.png" alt=User Icon" style="width: 22px; height: 22px;"></a></li>
+                <li><a href="#"><img src="assets/images(1)/images/Union.png" alt="User Icon" style="width: 22px; height: 22px;"></a></li>
             </ul>
         </div>
         <div class="user-info">Hi, Jack</div>
