--- a/company.html
+++ b/company.html
@@ -172,7 +172,10 @@
         <div class="main-cards">
             <div class="card-full-width">
                 <h3>SELECTED ITEMS</h3>
-                <p style="font-size: 14px; color: #555; display: inline-flex; align-items: center;">Electronics and electrical manufacturing&emsp;|&emsp;Automobile manufacturing&emsp;|&emsp;Chemical manufacturing&emsp;<img style="width: 24px; vertical-align: middle;" src="assets/icons/plus.png"></p>
+                <p style="font-size: 14px; color: #555; display: inline-flex; align-items: center;">
+                    Electronics and electrical manufacturing&emsp;|&emsp;Automobile manufacturing&emsp;|&emsp;Chemical manufacturing&emsp;
+                    <img style="width: 24px; vertical-align: middle;" src="assets/icons/plus.png">
+                </p>
                 
             </div>
             
