--- a/signup.html
+++ b/signup.html
@@ -64,6 +64,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 40px;
         }
         h1 {
             text-align: center;
@@ -76,7 +77,7 @@
             display: block;
             margin-bottom: 5px;
         }
-        input, select {
+        .input-full-width {
             width: calc(100% - 80px);
             padding: 10px;
             margin-top: 5px;
@@ -85,6 +86,10 @@
         }
         .input-short {
             width: calc(calc(100% - 80px)/3 - 18px);
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
         .goal-buttons {
             display: flex;
@@ -166,18 +171,20 @@
 </div>
 <div class="divider"></div>
 
+
+<form action="#" onsubmit="return goToCompanyPage()" method="GET"> <!-- Wrap the form inside a <form> tag -->
 <div class="container">
     <h1>SIGN UP</h1>
     <div class="form-group">
         <div style="display: inline-flex; align-items: center;">
             <label style="margin-right: 20px;">
-                <span style="color: red;">*</span> I am a    
+                I am a    
             </label>
             <label style="margin-right: 10px;">
-                <input type="radio" name="userType" value="supplier"> Supplier
+                <input type="radio" name="userType" value="supplier" required checked> Supplier
             </label>
             <label>
-                <input type="radio" name="userType" value="buyer"> Buyer
+                <input type="radio" name="userType" value="buyer" required> Buyer
             </label>
         </div>
     </div>
@@ -185,21 +192,21 @@
     <div class="form-group">
         <label for="name">
             <img src="assets/icons/user.svg" alt="User Icon" style="width: 24px; height: 24px;"> *&emsp;
-            <input type="text" id="name" placeholder="Name" required>
+            <input type="text" id="name" class="input-full-width" placeholder="Name" required>
         </label>
     </div>
 
     <div class="form-group">
         <label for="email">
             <img src="assets/icons/email.svg" alt="Email Icon" style="width: 24px; height: 24px;"> *&emsp;
-            <input type="text" id="email" placeholder="Email" required>
+            <input type="text" id="email" class="input-full-width" placeholder="Email" required>
         </label>
     </div>
 
     <div class="form-group">
         <label for="password">
             <img src="assets/icons/password.svg" alt="Password Icon" style="width: 24px; height: 24px;"> *&emsp;
-            <input type="text" id="password" placeholder="Password" required>
+            <input type="password" id="password" class="input-full-width" placeholder="Password" required>
         </label>
     </div>
 
@@ -239,7 +246,7 @@
 
     <div id="drop-area">
         <p><img src="assets/icons/upload.svg" style="width: 30px; vertical-align: middle; color: black;"> REOUlRED: Drag & Drop or Click to add 1 profile picture maximum (5MB limit). More can be added later!</p>
-        <input type="file" id="file-input" accept="image/*" required/>
+        <input type="file" id="file-input" name="file" accept="image/*"/>
     </div>
 
     <script>
@@ -281,6 +288,29 @@
                 // You can send the file to your server here using XMLHttpRequest or Fetch API
             }
         });
+
+        function goToCompanyPage() {
+            const radios = document.getElementsByName('userType'); // Get all radio buttons with name="userType"
+            let selectedValue;
+
+            // Loop through the radio buttons to check which one is selected
+            for (const radio of radios) {
+                if (radio.checked) {
+                    selectedValue = radio.value; // Get the value of the selected radio button
+                    break;
+                }
+            }
+
+            /*
+            if (selectedValue) {
+                alert("Selected value: " + selectedValue); // Display the selected value
+            } else {
+                alert("No selection made.");
+            }*/
+
+            window.location.href = window.location.href.substring(0,window.location.href.length-12) + "company.html#" + selectedValue;  // Redirect to another page
+            return false;  // Prevent the default form submission
+        }
     </script>
 
     <!--
@@ -295,6 +325,8 @@
         <button type="submit" class="register-button">REGISTER</button>
     </div>
 </div>
+
+</form>
 
 </body>
 </html>
