Extract the data to single file

--- a/company.html
+++ b/company.html
@@ -186,6 +186,7 @@
         <!-- Company Cards -->
         <link rel="stylesheet" href="company-card.css">
         <div id="company-list" class="company-container"></div>
+        <script src="company-data.js"></script>
         <script src="company-card.js"></script>
     
     </div>
