--- a/company-detail.html
+++ b/company-detail.html
@@ -271,8 +271,8 @@
                 <img src="${product.imgSrc}" alt="${product.name}" class="product-image">
                 <div class="product-name">${product.name}</div>
                 <div class="product-description">${product.description}</div>
-                <div class="product-price">${product.price}</div>
-                <div class="product-min-order">${product.minOrder}</div>
+                <div class="product-price">US$ ${product.price.toFixed(2)}</div>
+                <div class="product-min-order">Min. Order: ${product.minOrder}</div>
             `;
 
                 productList.appendChild(productCard);
